--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Models/Materials/Material.mat.meta
+Assets/Scenes/Menu.unity
+Assets/Scripts/ServerIPAddress.cs
+Assets/Scripts/MenuBehaviour.cs
